//Protocol Buffer file generated by pbandj.

//Required as of protobuf version 2.4.0 to generate service stubs.
option py_generic_services = true;
option java_generic_services = true;

import "pbandj_test.proto";
import "django_types.proto";

service SimpleService {
	rpc getSimple (Simple) returns (Simple);

	rpc getSimpler (Simple) returns (Simple);

}
service SimplerService {
	rpc simplyGet (Simple) returns (Simple);

}
